--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "crypto": "^0.0.3",
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
+    "prop-types": "^15.5.10",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "custom-react-scripts": "0.0.23"
   },
   "scripts": {
     "start": "react-scripts start",
