--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "crypto": "^0.0.3",
+    "material-ui": "^0.18.1",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "prop-types": "^15.5.10",
