--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mobx-react": "^4.1.8",
     "prop-types": "^15.5.10",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "custom-react-scripts": "0.0.23"
